Fixed Workplace overflow, padding and note selected

--- a/src/style/_workplace.scss
+++ b/src/style/_workplace.scss
@@ -16,7 +16,6 @@
 
 .workplace {
   height: 100vh;
-  min-width: 70vw;
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -32,7 +31,7 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    padding: 0 5em;
+    padding: 0 3em;
     .toolbar-saved-status {
       font-size: 12px;
     }
@@ -59,10 +58,10 @@
     }
   }
   .editor {
-  z-index: 1;
+    z-index: 1;
     width: 100%;
     height: 100%;
-    padding: 2em 5em;
+    padding: 2em 3em;
     overflow-y: scroll;
     .tags {
       display: flex;
@@ -87,7 +86,7 @@
       margin: 0;
       font-size: 32px;
       font-weight: bold;
-      font-family: 'Inter', sans-serif;
+      font-family: "Inter", sans-serif;
       border: none;
       width: 100%;
     }
@@ -97,7 +96,7 @@
     }
     #editor-content .ql-editor {
       padding: 0;
-      font-family: 'Inter', sans-serif;
+      font-family: "Inter", sans-serif;
       font-size: 16px;
       width: 100%;
       min-height: 80px;
